--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,36 @@
 :root{
   --clr-primary-pink: hsl(322, 100%, 66%);
   --clr-neutral-dark: hsl(192, 100%, 9%);
+  --clr-neutral-mid: rgba(0, 37, 46, 0.75);
   --clr-neutral-light: hsl(207, 100%, 98%);
   --clr-white: #fff;
 }
 
 *, *:before, *:after {
-  box-shadow: border-box;
+  box-sizing: border-box;
 }
 
 /* Base styles, Typography */
 
 body {
   font-family: 'Open Sans', sans-serif;
+  color: var(--clr-neutral-dark);
   margin: 0;
 }
 
 h1, h2, h3 {
   font-family: 'Poppins', sans-serif;
-  font-weight: 700;;
+  font-weight: 700;
+  margin: 0;
+}
+
+p {
+  color: var(--clr-neutral-mid);
+  /* font-weight: 300; */
+  font-size: 0.85rem;
+  line-height: 1.6;
+  margin: 0;
+
 }
 
 
@@ -26,26 +38,337 @@ h1, h2, h3 {
 section {
   background: var(--clr-white);
   text-align: center;
+  margin: 1em 0;
+}
+
+nav,
+footer,
+section {
+  padding: 0 2.25em;
+}
+
+img {
+  max-width: 100%;
 }
 
 /* Buttons */
 /* EDIT LATER */
 button {
   font-family: 'Open Sans', sans-serif;
+  color: var(--clr-white);
   border-color: var(--clr-primary-pink);
-  border-radius: 10px;
-  padding: 1em 2em;
+  background: var(--clr-primary-pink);
+  border-radius: 50px;
+}
+button:focus {
+  outline: none;
+}
+
+
+/* ------Nav Section */
+
+nav {
+  margin-top: 2em;
+  margin-bottom: 6em;
+}
+
+.nav__logo {
+  
+  width: 30%;
+  height: auto;
+}
+
+
+.nav__btn {
+  float: right;
+  font-size: 0.6rem;;
+  color: var(--clr-primary-pink);
+  background: var(--clr-white);
+  padding: 0.6em 2.2em;
 }
 
 
 
 
+/* ------Header section */
 
+.header__heading {
+  line-height: 1.6;
+  margin-bottom: 1em;
+
+}
+
+
+.header__text {
+  margin-bottom: 3.5em;
+}
+
+.header__btn {
+  font-weight: 600;
+  letter-spacing: 1px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+  padding: 1em 3.5em;
+  margin-bottom: 8em;
+}
+
+
+.header__image {
+  width: 100%;
+  margin-bottom: 8em;
+}
+
+
+
+/* -------Stats Section */
+
+.stats {
+  margin-bottom: 10em;
+}
+
+.stats-box {
+  width: 50%;
+  margin: 0 auto 6em;
+}
+
+.stats-box__image {
+  width: 20%;
+  float: left;
+  margin-bottom: -0.5em;
+
+}
+
+.stats-box__heading {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 4rem;
+  font-weight: 700;
+  margin-bottom: 0.1em;
+}
+
+/* ------Details sections */
+.details {
+  padding-top: 5em;
+  padding-bottom: 5em;
+  margin-bottom: 10em;
+}
+
+.details__image {
+  width: 80%;
+  margin-bottom: 4em;
+}
+
+.details__heading {
+  font-size: 1.25rem;
+  margin-bottom: 1em;
+}
+
+/* ------Grow Section */
+
+.grow, .users {
+  background: var(--clr-neutral-light);
+  position: relative;
+}
+
+.grow::before {
+  content: "";
+  position: absolute;
+  top: -110px;
+  left: 0;
+  background-image: url("images/bg-section-top-mobile-1.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+
+  width: 100%;
+  height: 110px;
+
+}
+
+.grow::after {
+  content: "";
+  position: absolute;
+  bottom: -68px;
+  left: 0;
+  background-image: url("images/bg-section-bottom-mobile-1.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+
+  width: 100%;
+  height: 85px;
+
+}
+
+/* ----- Converstations Section */
+.conversations {
+  background: var(--clr-white);
+}
+
+/* ------ Users Section */
+
+.users::before {
+  content: "";
+  position: absolute;
+  top: -100px;
+  left: 0;
+  background-image: url("images/bg-section-top-mobile-2.svg");
+
+  width: 100%;
+  height: 100px;
+}
+
+.users {
+  padding-top: 2em;
+  padding-bottom: 6em;
+}
+
+.users::after {
+  content: "";
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  background-image: url("images/bg-section-bottom-mobile-2.svg");
+
+  width: 100%;
+  height: 100px;
+}
+
+
+/* -----CTA Section */
+
+.cta__heading {
+  margin-bottom: 1.5em;
+}
+
+/* REPEAT OF HEADER BTN CODE, COMBINE SELECTOR */
+.cta__btn {
+  font-weight: 600;
+  letter-spacing: 1px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+  padding: 1em 3.5em;
+  margin-bottom: 8em;
+}
+
+
+/* Contact box */
+.contact__icon {
+  color: var(--clr-white);
+}
+
+/* -----Footer */
+
+footer {
+  background: var(--clr-neutral-dark);
+  color: var(--clr-white);
+  padding-top: 5em;
+  padding-bottom: 2em;
+  position: relative;
+}
+
+footer p {
+  color: var(--clr-white);
+}
+
+/* Best set up */
+footer::before {
+  content: "";
+  position: absolute;
+  top: -50px;
+  left: 0;
+
+  background-image: url("images/bg-footer-top-mobile.svg");
+  width: 100%;
+  height: 50px;
+}
+
+/* Newsletter */
+.newsletter__heading {
+  /* font-weight: 600; */
+  letter-spacing: 1px;;
+  text-transform: uppercase;
+  margin-bottom: 1em;;
+}
+
+.newsletter__text {
+  line-height: 1.6;
+  margin-bottom: 2em;
+}
+
+.newsletter__input {
+  width: 100%;
+  display: block;
+  height: 4em;
+
+  border-radius: 5px;
+  border: 1px #333 solid;
+
+  margin-bottom: 1em;;
+}
+
+/* MOST STYPES REPEATED */
+.newsletter__btn {
+  font-weight: 600;
+  letter-spacing: 1px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+  margin-bottom: 5em;
+  
+  
+  padding: 0.75em 2em;
+  border-radius: 5px;
+  float: right;
+  font-size: 1rem;
+}
+
+.newsletter::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+
+/* Contact */
+.contact__logo {
+  width: 70%;
+  margin-bottom: 0.75em;
+}
+
+.contact__text {
+  margin-bottom: 3em;
+}
+
+.contact__link {
+  font-size: 0.9rem;
+  color: var(--clr-white);
+  text-decoration: none;
+
+  display: inline-block;
+  margin-bottom: 1em;
+}
+
+.contact__icon {
+  margin-right: 1.5em;
+}
+
+.contact__email {
+  margin-bottom: 2em;
+}
+
+.socials__icon {
+  font-size: 1.75rem;
+  margin-right: 0.2em;
+}
+
+.contact {
+  margin-bottom: 5em;
+}
+
+
+/* -----------Footer attribution */
 .attribution {
   font-size: 11px;
   text-align: center;
 }
 
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: var(--clr-neutral-light);
+  font-weight: 700;
 }
